# verdict-bench

./: .gclient  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  Readme.md  bench.sh  build-ceres.sh  cert_bench.c  cert_bench.diff  cert_bench.js  cert_bench.sh  chainVerify.py  compile.sh  dep.mk  deps.diff  driver.py  fake_server.py  fake_server_certs.py  helpers.py  install.sh  morpheus-bin  mozconfig  out1.txt  out2.txt  pemDecoder.py  remove_builtin_roots.diff  requirements.txt  run.sh  standalone.Dockerfile  temp.txt  test.py  test_end_to_end.py  test_inp.txt  verifySignature.py
.github/workflows/: build.yml  docker.yml
admin/: bench-measure.mk
cert_rep/: replicate_chain.py  replicate_roots.py
certs/: certificate.csr  certificate.key  certificate.pem  facebook-com-chain.pem  google-com-chain.pem  root.pem  root_ca.key  root_ca.pem  root_ca.srl  slack-com-chain.pem  stage-stonybrook-edu-chain.pem  sts-uiowa-edu-chain.pem  uiowa-chain.pem  www-amazon-com-chain.pem  www-google-com-chain.pem  www-microsoft-com-chain.pem
chain/: Cargo.toml  Makefile
chain/src/: convert.rs  ecdsa.rs  engine.rs  error.rs  hash.rs  issue.rs  lib.rs  main.rs  rsa.rs  specs.rs  utils.rs  validate.rs
chain/src/facts/: cert.rs  ext.rs  query.rs
chain/src/policy/: chrome.rs  common.rs  firefox.rs  mod.rs  openssl.rs  rfc.rs  standard.rs
chain/src/signature/: mod.rs
chain/tests/policies/: chrome.pl  firefox.pl
data/ct-log/: README.md
data/ct-log/ints/: _aia.xca.xpki.com_AIA_IssuedCertsforXTec_PIVI_CA1.p7c.pem  _autorite.certigna.fr_wildca.der.pem  _cacert.actalis.it_certs_actalis-autdvg1.pem  _cacert.actalis.it_certs_actalis-autdvg2.pem  _cacert.actalis.it_certs_actalis-autevg2.pem  _cacert.actalis.it_certs_actalis-authovg2.pem  _cacerts.digicert-cn.com_SecureSiteCA.crt.pem  _cacerts.digicert-cn.com_SecureSiteProExtendedValidationCA.crt.pem  _cacerts.digicert.com_CybertrustJapanExtendedValidationServerCA.crt.pem  (+51 more)
frontend/: Cargo.toml  Makefile
frontend/src/: cmd_bench_ct_logs.rs  cmd_diff_results.rs  cmd_parse_cert.rs  cmd_validate.rs  cmd_validate_ct_logs.rs  ct_logs.rs  error.rs  main.rs  utils.rs  validator.rs
frontend/src/bench/: chromium.rs  common.rs  firefox.rs  mod.rs  verdict.rs
frontend/src/cmd/: bench_ct_logs.rs  diff_results.rs  limbo.rs  mod.rs  parse_cert.rs  parse_ct_logs.rs  validate.rs  validate_ct_logs.rs
frontend/src/harness/: armor.rs  ceres.rs  chrome.rs  common.rs  firefox.rs  hammurabi.rs  mod.rs  openssl.rs  verdict.rs
frontend/tests/policies/: chrome.pl  firefox.pl
more_test_certs/: cert_1025086070.pem-chain.pem  cert_1097184815.pem-chain.pem  cert_1099558750.pem-chain.pem  cert_1105239718.pem-chain.pem  errors.md
parser/: Cargo.toml  Makefile
parser/src/: lib.rs
parser/src/asn1/: base128.rs  big_int.rs  bit_string.rs  integer.rs  len_wrapped.rs  null.rs  octet_string.rs  oid.rs  tag.rs  utf8_string.rs
parser/src/common/: base64.rs  cached.rs  end.rs  eq.rs  mapper.rs  option_deep.rs  unreachable.rs  vec_deep.rs  wrapped.rs
parser/src/x509/: alg_param.rs  cert.rs  ext_value.rs  extension.rs  macros.rs  oid.rs  pub_key_info.rs
polyfill/: Cargo.toml  Makefile
polyfill/src/: lib.rs
ref-results/: diff-chrome.csv  diff-firefox.csv  diff-openssl.csv  diff-verdict-chrome.csv  diff-verdict-firefox.csv  diff-verdict-openssl.csv  end-to-end-aws-lc.csv  end-to-end-libcrux.csv  limbo-chrome.csv  limbo-firefox.csv  limbo-openssl.csv  limbo-verdict-chrome.csv  limbo-verdict-firefox.csv  limbo-verdict-openssl.csv  perf-armor.csv  perf-ceres.csv  perf-hammurabi-chrome.csv  perf-hammurabi-firefox.csv
rspec/: Cargo.toml
rspec/src/: lib.rs
rspec_lib/: Cargo.toml  Makefile
rspec_lib/src/: lib.rs
rspec_test/: Cargo.toml  Makefile
rspec_test/src/: chrome.rs  chrome_verus.rs  main.rs  tests.rs
rustls/: Cargo.toml
rustls/src/: lib.rs
scripts/: README.md  diff_plot.py  diff_results.py  fake_server.py  perf_results.py  performance_plot.py  rustls_end_to_end.py  rustls_results.py
src/: Makefile  driver.py
src/Armor/: IO.agda  Main.agda
src/modules/: helper.py
stats/: diff_plot.py  performance_plot.py
test/: Cargo.toml  Makefile
test/src/: error.rs  main.rs
tools/: activate.sh
tools/stats/: diff_plot.py  performance_plot.py
tools/verusc/: Cargo.toml
verdict/: Cargo.toml
verdict-bin/: Cargo.toml
verdict-bin/src/: error.rs  utils.rs
verdict-core/: Cargo.toml
verdict-core/src/: convert.rs  error.rs  hash.rs  issue.rs  lib.rs  validator.rs
verdict-parser/: Cargo.toml
verdict-parser/src/: lib.rs
verdict-parser/src/asn1/: base128.rs  big_int.rs  bit_string.rs  boolean.rs  bounds.rs  disjoint.rs  explicit.rs  gen_time.rs  ia5_string.rs  implicit.rs  integer.rs  len.rs  len_wrapped.rs  mod.rs  null.rs  octet_string.rs  oid.rs  printable_string.rs  seq_of.rs  tag.rs  utc_time.rs  utf8_string.rs  var_int.rs
verdict-parser/src/common/: base64.rs  cached.rs  clone.rs  default.rs  depend.rs  end.rs  eq.rs  mapper.rs  mod.rs  option_deep.rs  optional.rs  repeat.rs  vec_deep.rs  wrapped.rs
verdict-parser/src/x509/: alg_id.rs  alg_param.rs  attr_typ_val.rs  cert.rs  dir_string.rs  display.rs  ext_value.rs  extension.rs  general_name.rs  mod.rs  name.rs  oid.rs  pub_key_info.rs  rdn.rs  tbs_cert.rs  time.rs  validity.rs
verdict-polyfill/: Cargo.toml
verdict-polyfill/src/: lib.rs
verdict-rspec/: Cargo.toml
verdict-rspec-lib/: Cargo.toml
verdict-rspec-test/: Cargo.toml
verdict-rspec-test/src/: tests.rs
verdict-rspec/src/: lib.rs
verdict/src/: convert.rs  error.rs  issue.rs  lib.rs  utils.rs  validator.rs
verdict/src/cmd/: bench_ct_logs.rs  limbo.rs  parse_cert.rs  parse_ct_logs.rs  validate.rs
verdict/src/harness/: common.rs  verdict.rs
verdict/src/policy/: chrome.rs  common.rs  firefox.rs  openssl.rs
verdict/src/signature/: ecdsa_aws_lc.rs  ecdsa_libcrux.rs  rsa_libcrux.rs
vest/: Cargo.toml  Makefile
vest/src/: lib.rs
vest/src/regular/: tag.rs
vpl/src/: backend.rs  checker.rs  display.rs  main.rs  matching.rs  meta.pl  parser.rs  proof.rs  trace.rs  validate.rs
(+16 files in other folders)
