[workspace]
members = [
    "verdict",
    "verdict-bin",
    "verdict-macros",
    "verdict-parser",
    "verdict-polyfill",
    "verdict-rspec",
    "verdict-rspec-lib",
    "verdict-rspec-test",
    "deps/vest",
]

default-members = [
    "verdict-bin",
]

exclude = [
    "tools/verusc",
    "deps/verus",
    "deps/libcrux",
]

resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
