[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
macros = { path = "../macros" }
parser = { path = "../parser" }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.63"
libcrux = { git = "https://github.com/zhengyao-lin/libcrux.git" }
libcrux-hacl = { git = "https://github.com/zhengyao-lin/libcrux.git" }
chrono = "0.4.38"
aws-lc-rs = "1.10.0"
rspec = { path = "../rspec" }
rspec-lib = { path = "../rspec_lib" }
