[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
builtin = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
vstd = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
macros = { path = "../macros" }
parser = { path = "../parser" }
libcrux = { git = "https://github.com/zhengyao-lin/libcrux.git" }
libcrux-hacl = { git = "https://github.com/zhengyao-lin/libcrux.git" }
chrono = "0.4.38"
aws-lc-rs = "1.10.0"
rspec = { path = "../rspec" }
rspec-lib = { path = "../rspec_lib" }

[profile.verify]
inherits = "dev"
