[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../verus/source/builtin_macros" }
builtin = { path = "../verus/source/builtin" }
vstd = { path = "../verus/source/vstd" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
macros = { path = "../macros" }
parser = { path = "../parser" }
libcrux = { git = "https://github.com/zhengyao-lin/libcrux.git" }
libcrux-hacl = { git = "https://github.com/zhengyao-lin/libcrux.git" }
chrono = "0.4.38"
aws-lc-rs = "1.10.0"
rspec = { path = "../rspec" }
rspec-lib = { path = "../rspec_lib" }

[features]
default = []
aws-lc = []

[verus]
extra_flags = "--no-lifetime"
