[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
parser = { path = "../parser" }
chain = { path = "../chain" }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.63"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
regex = "1.11.0"
crossbeam = "0.8.4"
cpu-time = "1.0.0"
heappy = { git = "https://github.com/mkmik/heappy", branch = "main" }
rspec-lib = { path = "../rspec_lib" }
