[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../verus/source/builtin_macros" }
builtin = { path = "../verus/source/builtin" }
vstd = { path = "../verus/source/vstd" }
vest = { path = "../vest" }
polyfill = { path = "../polyfill" }
der = { version = "0.7.9", features = [ "alloc", "oid" ] }
macros = { path = "../macros" }
base64 = "0.22.1"
paste = "1.0.15"
