[package]
name = "polyfill"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
builtin = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
vstd = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }

[profile.verify]
inherits = "dev"
