[package]
name = "rspec"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn_verus = { git = "https://github.com/verus-lang/verus", features = [ "full" ] }
