[package]
name = "verdict"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin_macros = { path = "../deps/verus/source/builtin_macros" }
builtin = { path = "../deps/verus/source/builtin" }
vstd = { path = "../deps/verus/source/vstd" }
vest = { path = "../deps/vest" }
libcrux = { path = "../deps/libcrux" }
libcrux-hacl = { path = "../deps/libcrux/sys/hacl" }
chrono = "0.4.38"
aws-lc-rs = "1.10.0"
verdict-polyfill = { path = "../verdict-polyfill" }
verdict-macros = { path = "../verdict-macros" }
verdict-parser = { path = "../verdict-parser" }
verdict-rspec = { path = "../verdict-rspec" }
verdict-rspec-lib = { path = "../verdict-rspec-lib" }

[features]
default = []
aws-lc = []

[package.metadata.verus]
verify = true
