[package]
name = "vest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builtin_macros = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
builtin = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }
vstd = { git = "https://github.com/zhengyao-lin/verus", branch = "x509" }

[dev-dependencies]

[package.metadata.verus.ide]
extra_args = "--crate-type=lib --expand-errors --test"

[profile.verify]
inherits = "dev"
